k8s/kustomize/gateway-config/argocd-filter.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-private-network-only
  namespace: argocd
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
