k8s/kustomize/gateway-config/argocd-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server
  namespace: argocd
spec:
  hosts:
    - "argocd.local"
    - "localhost"
  gateways:
    - istio-ingress/http-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - "argocd.local"
            - "localhost"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 443
